[package]
name = "sc4n"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
indicatif = "0.17"
rand = "0.8"
anyhow = "1"
futures = "0.3"

[profile.release]
opt-level = 3
strip = true
lto = true
